# mensa_bot

./: .gitignore  Dockerfile  README.md  bot.py  docker-compose.yaml  mensa-bot.yaml  mensa_scraper.py  pyproject.toml  requirements.txt  scraper.py
.github/workflows/: docker-image.yml
